secondfile/objects/DHStatus_Testing_Details__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Testing Details</description>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus - Update Deal Hash Details</label>
        <referenceTo>DHStatus_Update_Deal_Hash_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Testing Details</relationshipLabel>
        <relationshipName>DHStatus_Testing_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_IDH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus – Update IDH</label>
        <referenceTo>DHStatus_Update_IDH__c</referenceTo>
        <relationshipLabel>DHStatus-Testing Details</relationshipLabel>
        <relationshipName>DHStatus_Testing_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Run_Time__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details</description>
        <label>Estimated Run Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRID_Premise_ID__c</fullName>
        <formula>DHStatus_Update_Deal_Hash_Details__r.GRID_Premise_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GRID Premise ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedTimeStamp__c</fullName>
        <label>Last Modified Time Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Identifier__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details</description>
        <label>Request Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details</description>
        <label>Request Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_ID__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Testing Details</description>
        <label>System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Testing Details</description>
        <label>User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Testing Details</label>
    <nameField>
        <displayFormat>TD-{00000}</displayFormat>
        <label>DHStatus-Testing Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Testing Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>